# easy-packet-sniffer

./: .gitignore  PROJECT_GUIDE.md  README.md  pyproject.toml
docs/phases/: README.md  phase-00-foundations.md  phase-01-capture-loop.md  phase-02-parsing.md  phase-03-pcap-io.md  phase-04-threading.md  phase-05-ui-mvp.md  phase-06-detail-hex.md  phase-07-filters.md  phase-08-stats.md  phase-09-hygiene.md  phase-10-portfolio.md
scripts/: cli_capture.py  list_ifs.py  test_scapy.py
src/eps/core/: capture_engine.py  packet.py  parser.py  pcap_io.py
tests/: test_parser.py  test_pcap_io.py
