[project]
name = "easy-packet-sniffer"
version = "0.1.0"
description = "Wireshark-style packet sniffer with a PyQt6 frontend"
requires-python = ">=3.13"
dependencies = ["scapy>=2.6,<3.0", "PyQt6>=6.8,<7.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0", "import-linter>=2.0,<3.0"]

[project.scripts]
eps = "eps.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.importlinter]
root_package = "eps"

[[tool.importlinter.contracts]]
name = "Core layer must not import PyQt6"
type = "forbidden"
source_modules = ["eps.core"]
forbidden_modules = ["PyQt6"]

[[tool.importlinter.contracts]]
name = "Controllers must not import Qt widgets"
type = "forbidden"
source_modules = ["eps.controllers"]
forbidden_modules = ["PyQt6.QtWidgets"]
